<resources>
    <string name="app_name">Theorie App</string>

    <string name="title_activity_settings">SettingsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>

    <string name="next">next</string>
    <string name="check">check</string>
    <string name="login">login</string>
    <string name="pwd">Next</string>
    <string name="naam">naam</string>
    <string name="welkom">welkom</string>
    <string name="login_go">login_go</string>
    <string name="auth">Auth screen!</string>

    <string name="previous">Previous</string>

    <string name="next_Question">NEXT</string>
    <string name="correct_Questions">Correct: 0</string>
    <string name="wrong_Questions">Wrong: 0</string>
    <string name="no_of_Questions">Question: 1/10</string>
    <string name="score_Total">Score: 0</string>


</resources>
