<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg_Color"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    tools:context=".QuizActivity">

    <TextView
        android:id="@+id/txtTotalQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_of_Questions"
        android:textSize="22sp"
        android:textColor="@color/text_Color"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp">

        <TextView
            android:id="@+id/txtScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/score_Total"
            android:textStyle="bold"
            android:textColor="@color/text_Color"
            android:textSize="18sp"

            />

        <TextView
            android:id="@+id/txtCorrect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/correct_Questions"
            android:textStyle="bold"
            android:textColor="@color/text_Color"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/txtWrong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/wrong_Questions"
            android:textStyle="bold"
            android:textColor="@color/text_Color"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/txtTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="00:13"
            android:textAlignment="textEnd"
            android:textStyle="bold"
            android:textColor="@color/text_Color"
            android:textSize="18sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtQuestionContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textColor="@color/text_Color_White"
            android:textStyle="bold"
            android:padding="20dp"
            android:text=""
            android:background="@drawable/question_container_bg"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="vertical">

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/radio_button1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:layout_marginTop="5dp"
                android:freezesText="true"
                android:text=""
                android:textSize="22dp"
                android:padding="15dp"
                android:background="@drawable/default_option_bg"
                android:textColor="@color/text_Color_White"
                android:textAlignment="center"/>

            <RadioButton
                android:id="@+id/radio_button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:button="@null"
                android:freezesText="true"
                android:text=""
                android:padding="15dp"
                android:background="@drawable/default_option_bg"
                android:textSize="22sp"
                android:textColor="@color/text_Color_White"
                android:textAlignment="center"/>

            <RadioButton
                android:id="@+id/radio_button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:button="@null"
                android:freezesText="true"
                android:layout_marginTop="5dp"
                android:padding="15dp"
                android:background="@drawable/default_option_bg"
                android:text=""
                android:textSize="22sp"
                android:textColor="@color/text_Color_White"
                android:textAlignment="center"/>

            <RadioButton
                android:id="@+id/radio_button4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:button="@null"
                android:freezesText="true"
                android:layout_marginTop="5dp"
                android:text=""
                android:padding="15dp"
                android:background="@drawable/default_option_bg"
                android:textSize="22sp"
                android:textColor="@color/text_Color_White"
                android:textAlignment="center"/>
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_Next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/confirm_button_bg"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:padding="20dp"
            android:textSize="25sp"
            android:text="@string/next_Question"
            android:textColor="@color/text_Color_White"/>
    </LinearLayout>


</LinearLayout>